<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_elements"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/cardview_light_background"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/hint_only_num"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHighlight="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toStartOf="@+id/btn_start_stop"
        app:layout_constraintTop_toTopOf="@+id/textViewOperationsCollection" />

    <EditText
        android:id="@+id/et_threads"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/cardview_light_background"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/hint_only_num"
        android:inputType="textPersonName"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHighlight="@color/design_default_color_on_secondary"
        app:layout_constraintBottom_toBottomOf="@+id/textViewThreadsCollectionMaps"
        app:layout_constraintEnd_toStartOf="@+id/btn_start_stop"
        app:layout_constraintTop_toBottomOf="@+id/et_elements"
        app:layout_constraintVertical_bias="1.0" />


    <Switch
        android:id="@+id/btn_start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="@+id/et_threads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_elements" />

    <TextView
        android:id="@+id/textViewOperationsCollection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/operations"
        app:layout_constraintEnd_toStartOf="@+id/et_elements"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewThreadsCollectionMaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/threads"
        app:layout_constraintStart_toStartOf="@+id/textViewOperationsCollection"
        app:layout_constraintTop_toBottomOf="@+id/textViewOperationsCollection" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_for_tab"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_threads" />

</androidx.constraintlayout.widget.ConstraintLayout>
